--- a/tutorials/02_graph_manipulations_with_networkx_compatible_apis.ipynb
+++ b/tutorials/02_graph_manipulations_with_networkx_compatible_apis.ipynb
@@ -236,7 +236,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "list(G.edges.data())  # shows the edge arrtibutes"
+    "list(G.edges.data())  # shows the edge attributes"
    ]
   },
   {
@@ -972,7 +972,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "H = DG.to_undirected()  # return a \"deepcopy\" of undirected represetation of DG.\n",
+    "H = DG.to_undirected()  # return a \"deepcopy\" of undirected representation of DG.\n",
     "list(H.edges)"
    ]
   },
@@ -1000,7 +1000,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "K = DG.reverse()  # retrun a \"deepcopy\" of reversed copy.\n",
+    "K = DG.reverse()  # return a \"deepcopy\" of reversed copy.\n",
     "list(K.edges)"
    ]
   },
