--- a/tutorials/zh/07_interactive_query_with_gremlin.ipynb
+++ b/tutorials/zh/07_interactive_query_with_gremlin.ipynb
@@ -50,7 +50,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Greate GIE engine with Gremlin\n",
+    "# Create GIE engine with Gremlin\n",
     "\n",
     "interactive = graphscope.gremlin(modern_graph)"
    ]
