--- a/tutorials/03_run_graphscope_like_networkx.ipynb
+++ b/tutorials/03_run_graphscope_like_networkx.ipynb
@@ -138,7 +138,7 @@
     "\n",
     "To use NetworkX interface from graphscope, we just need to replace `import networkx as nx` with `import graphscope.nx as nx `.\n",
     "\n",
-    "Here we use `nx.Graph()` interace to create an empty undirected graph."
+    "Here we use `nx.Graph()` interface to create an empty undirected graph."
    ]
   },
   {
