--- a/tutorials/04_loading_graphs.ipynb
+++ b/tutorials/04_loading_graphs.ipynb
@@ -534,7 +534,7 @@
    "source": [
     "Please note:\n",
     "\n",
-    "   1. This feature(multiple relations using same edge label) is only avaiable in `lazy` mode yet.\n",
+    "   1. This feature(multiple relations using same edge label) is only available in `lazy` mode yet.\n",
     "   2. It is worth noting that for several configurations in the side `Label`, \n",
     "      the attributes should be the same in number and type, and preferably \n",
     "      have the same name, because the data of the same `Label` will be put into one Table, \n",
