--- a/tutorials/06_writing_your_own_algorithms.ipynb
+++ b/tutorials/06_writing_your_own_algorithms.ipynb
@@ -137,13 +137,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The `Init` function are responsable for 1) setting the initial value for each node; 2) defining the strategy of message passing; and 3) specifing aggregator for handing received message on each rounds.    \n",
+    "The `Init` function are responsible for 1) setting the initial value for each node; 2) defining the strategy of message passing; and 3) specifying aggregator for handing received message on each rounds.    \n",
     "\n",
     "Note that the algorithm you defined will run on a property graph. So we should get the vertex label first by `v_label_num = frag.vertex_label_num()`, then we can traverse all nodes with the same label    \n",
     "and set the initial value by `nodes = frag.nodes(v_label_id)` and `context.init_value(nodes, v_label_id, 1000000000.0, PIEAggregateType.kMinAggregate)`.    \n",
     "\n",
-    "Since we are computing the shorest path between the source node and others nodes. So we use `PIEAggregateType.kMinAggregate` as the aggregator for mesaage aggregation, which means it will    \n",
-    "perform `min` operation upon all received messages. Other avaliable aggregators are `kMaxAggregate`, `kSumAggregate`, `kProductAggregate`, and `kOverwriteAggregate`.\n",
+    "Since we are computing the shortest path between the source node and others nodes. So we use `PIEAggregateType.kMinAggregate` as the aggregator for message aggregation, which means it will    \n",
+    "perform `min` operation upon all received messages. Other available aggregators are `kMaxAggregate`, `kSumAggregate`, `kProductAggregate`, and `kOverwriteAggregate`.\n",
     "\n",
     "At the end of `Init` function, we register the sync buffer for each node with `MessageStrategy.kSyncOnOuterVertex`, which tells the engine how to pass the message."
    ]
